name:          haskell-thread-spawn
version:       0.1.0.0
synopsis:      Simple project template from stack
description:   Please see README.md
homepage:      http://github.com/githubuser/haskell-async#readme
license:       MIT
license-file:  LICENSE
author:        Author name here
maintainer:    example@example.com
copyright:     2010 Author Here
category:      Web
build-type:    Simple
cabal-version: >=1.10

executable haskell-thread-spawn
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010

  ghc-options:       -rtsopts -threaded -with-rtsopts=-N

  build-depends:     base

                   , async